white gap kinda fixed

--- a/ikea-vs-death-metal/src/App.css
+++ b/ikea-vs-death-metal/src/App.css
@@ -1,13 +1,40 @@
 #root {
   /* max-width: 1280px; */
-  margin: 0 auto;
-  padding-top: 20px;
+  /* margin: 0 auto; */
   /* padding: 20rem; */ /* doesnt work for game page */
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
   width: 100%;
   height: 100vh;
   text-align: center;
   color: pink;
   background-color: #1D1D2D;
+  /* overflow: hidden; */
+  overflow-x: hidden;
+overflow-y: auto;
+  /* border: 10px solid red !important; */
 }
 
+body {
+  /* border: 10px solid green !important; */
+  /* overflow: hidden */
+
+}
+
+html {
+  /* border: 10px solid purple !important; */
+  /* overflow: hidden */
+
+}
+/* 
+html { height: 100% }
+body { min-height: 100% } */
+
+
+
+/* .btn-next {
+  margin: 0;
+  padding: 0;
+} */
 
